--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,3 +40,22 @@ iframe#tela{
     width: 267px;
     height: 470px;
 }
+
+section#redes-sociais{
+    text-align: right;
+}
+
+section#redes-sociais img{
+    width: 50px;
+    border-radius: 25px;
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.406);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid orange;
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px black;
+    transition: transform .3s, border .4s;
+}
